--- a/Hierba-Santa/src/main/resources/application.properties
+++ b/Hierba-Santa/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=hs2024@HierbaSantaBD
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuración JPA
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 
 # Dialecto
